--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,7 @@ html {
 	padding: 0;
 	height: 100%;
   line-height: 1.6;
-  background-color:rgb(233, 233, 233);
-
+  background-color:#ffc6ff;
 }
 
 body{
@@ -30,7 +29,6 @@ header{
 	left: 0;
 	height: 50px;
 	width: 100%;
-  background:rgba(100, 100, 100, 0.9);
   z-index: 10;
 }
 
@@ -39,6 +37,7 @@ h1.title {
   text-align:left;
   line-height:10px;
   margin-left: 5px;
+  
 }
 
 ul.sns img {
@@ -58,11 +57,6 @@ ul.sns{
   right: 10px;
 }
 
-.caution {
-  background:#ffffff;
-  font-weight:900;
-}
-
 .who img{
   width: 200px;
   height: 200px;
@@ -73,10 +67,24 @@ ul.sns{
 
 .who{
   display:inline-flex;
+  width: 100%;
+}
+
+.answer {
+  background-color:#c6ffff;
+  border-radius: 50px 50px 50px 50px;
+  width: 100%;
+  font-weight: 900;
+}
+
+p.name{
+ font-size: 40px;
+ margin-top: auto;
+ margin-bottom: auto;
 }
 
 footer {
-  background-color: rgb(100, 100, 100);
+  background-color: #7f7fff;
   color: whitesmoke;
   text-align: center;
   margin-top: auto;
@@ -85,9 +93,6 @@ footer {
   width: 100%;
   left: 0;
 }
-
-
-
 
 .wrapper {
   width: 80%;
@@ -101,28 +106,33 @@ footer {
 }
 
 .main {
-  background: pink;
-  width: 60%;
+  background:#ffc6ff;
+  border-radius: 20px 20px 20px 20px;
+  width: 85%;
   margin-right: 20px;
-}
-
-.skill h1{
-  background: #f0f0f0;
+  padding: 30px;
   text-align:center
 }
 
-.side {
-  background: skyblue;
-  width: 25%;
+.skill{ 
+  background:#ffffe0;
+  border-radius: 50px 50px 50px 50px;
+}
+
+.skill p , .like p{
+  padding-top: 10px;
+  text-align:center;
+  font-weight: 900;
+  font-size: 35px;
 }
 
 .side p , .side ul , .main ul {
-  background-color: #f0f0f0;
-  padding: 30px;
+  padding: 10px;
+  font-weight: 900;
+  list-style: none;
 }
 
-.archive {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.like {
+  background-color: #c6ffff;
+  border-radius: 50px 50px 50px 50px;
 }
